err/iosappbackup.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CFPropertyList'...
Listing './lib/python3.5/site-packages/CFPropertyList-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/iosappbackup'...
Compiling './lib/python3.5/site-packages/iosappbackup/appbackup.py'...
***   File "./lib/python3.5/site-packages/iosappbackup/appbackup.py", line 101
    except AppBackupError, error:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iosappbackup/cli.py'...
***   File "./lib/python3.5/site-packages/iosappbackup/cli.py", line 173
    except AppBackupError, error:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iosappbackup/util.py'...
***   File "./lib/python3.5/site-packages/iosappbackup/util.py", line 75
    try: print s
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/iosappbackup-3.0.dev11.egg-info'...
Listing './lib/python3.5/site-packages/iosapplist'...
Compiling './lib/python3.5/site-packages/iosapplist/app.py'...
***   File "./lib/python3.5/site-packages/iosapplist/app.py", line 140
    except ContainerError, exc:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iosapplist/applist.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (applist.py, line 197)
Listing './lib/python3.5/site-packages/iosapplist/cli'...
Listing './lib/python3.5/site-packages/iosapplist/cli/commands'...
Listing './lib/python3.5/site-packages/iosapplist/cli/engine'...
Compiling './lib/python3.5/site-packages/iosapplist/cli/engine/cli.py'...
***   File "./lib/python3.5/site-packages/iosapplist/cli/engine/cli.py", line 105
    except StopIteration, exc:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iosapplist/cli/engine/command.py'...
***   File "./lib/python3.5/site-packages/iosapplist/cli/engine/command.py", line 181
    except StopIteration, exc:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iosapplist/cli/engine/commands'...
Compiling './lib/python3.5/site-packages/iosapplist/cli/engine/commands/shell.py'...
***   File "./lib/python3.5/site-packages/iosapplist/cli/engine/commands/shell.py", line 270
    except CLIError, exc:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iosapplist/container.py'...
***   File "./lib/python3.5/site-packages/iosapplist/container.py", line 98
    except propertylist.PropertyListError, exc:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iosapplist/util'...
Listing './lib/python3.5/site-packages/iosapplist-3.0.dev30.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
